--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     
 }
 .btn.btn-outline-dark{
-    color:black;
+    color:rgba(30, 28, 28, 0.926);
 }
 
 
@@ -15,7 +15,12 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color:black;
+    background-image: url(foto.4.png);
+   
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 *,html,body {
@@ -27,37 +32,42 @@ body {
     width: 1100px;
     margin: auto;
     position: relative;
-   color: black;
+    color: rgb(37, 34, 34);
+    
 }
 
 .logo{
     font-size: 50px;
-    font-weight: 800;
+    font-weight: 500;
     float: left;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
+    color: rgb(38, 35, 35);
+   
 }
 
 
 .menu{
     float: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 nav{
-    width: 100%;
-    margin: auto;
-    display:flex;
+    width: 50%;
+    margin: 0;
+    padding-left: 100px;
+    padding-right: 1000px;
+    display: inline-block;
     line-height: 80px;
 
 
 /* NAVIGATOR UL LI */
 position: sticky;
+vertical-align: top;
 position: -webkit-sticky;
 top: 0;
-background: black;
+background: rgb(58, 55, 55);
 z-index: 1;
 border-bottom: 1px;
-padding-bottom: 30px;
 }
 
 ul{
@@ -75,7 +85,7 @@ nav ul li{
 nav ul li a{
     color: white;
     font-weight: bold;
-    text-align: center;
+    text-align: right;
     padding: 0px 16px 0px 16px;
     text-decoration: none;
 }
@@ -103,7 +113,7 @@ a.tbl-biru:hover {
 
 /* WELCOME DAN BACKGROUND */
 
-.welcome{
+/* .welcome{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: flex;
     flex-direction: column;
@@ -117,7 +127,8 @@ a.tbl-biru:hover {
     background-attachment: fixed;
     color: gold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+} */
+
 
 /* WELCOME DAN BACKGROUND */
 .login {
@@ -127,7 +138,7 @@ a.tbl-biru:hover {
     justify-content: center;
     align-items: center;
     font-size: 10vh;
-    height: 100vh;
+    height: 105vh;
     background-image: url('foto.2.jpg');
     background-size: cover;
     background-position: center;
@@ -135,7 +146,7 @@ a.tbl-biru:hover {
     color: gold;
 }
 
-.login:before{
+/* .login:before{
     content: '';
     position: absolute;
     bottom: -120px;
@@ -153,4 +164,25 @@ a.tbl-biru:hover {
     height: 200px;
     background: linear-gradient(to top,black,transparent);
     right: 0px;
+} */
+
+.pengertian{
+    text-align: center;
+    font-size: x-large;
+    font-style: normal;
+    margin-top: 100px; 
 }
+
+p{
+    font-size: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.kelebihan{
+    background-color: black;
+    text-align: left;
+    font-size: x-large;
+    font-style: normal;
+    margin-top: 100px; 
+   
+}
+
