--- a/style1.css
+++ b/style1.css
@@ -6,11 +6,12 @@ body{
     align-items: center;
     font-size: 10px;
     height: 100vh;
-    background-image: url(foto.3.jpg);
+    background-image: url(foto.2.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     color: gold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: black;
+    border-color: aqua;
 }
